--- a/less/dropdowns.less
+++ b/less/dropdowns.less
@@ -226,6 +226,7 @@
 // Typeahead
 // ---------
 .typeahead {
+  z-index: 1051;
   margin-top: 2px; // give it some space to breathe
   .border-radius(@baseBorderRadius);
 }
